--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-react-hw-03-phonebook",
+  "name": "goit-react-hw-02-phonebook",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://RodionShpak.github.io/goit-react-hw-03-phonebook/",
@@ -7,14 +7,21 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "formik": "^2.2.9",
+    "imask": "^6.4.2",
+    "modern-normalize": "^1.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.3"
+    "source-map-resolve": "^0.6.0",
+    "web-vitals": "^2.1.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint:js": "eslint src/**/*.{js,jsx}"
@@ -36,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-devtools": "^4.25.0",
+    "styled-components": "^5.3.5",
+    "styled-system": "^5.1.5"
   }
 }
